15605
```scala
scala> def f { object C; case class C(); }
<console>:5: error: C is already defined as object C
       def f { object C; case class C(); }
                                    ^

scala> def g { case class C(); object C; }
<console>:5: error: C is already defined as (compiler-generated) case class companion object C
       def g { case class C(); object C; }
                                      ^
```

What happens: `ensureCompanionObject` looks up a term symbol `m` in the current scope named after the class. Then there are two cases:

 * If the companion object is given _before_ the class then it's symbol `m` is actually found. But then, `inCurrentScope(m)` is called which returns false. I don't understand what this method actually checks. But this should be easy to fix.
 * If the companion object is given _after_ the class we have a bigger problem. The symbol of the given module is not found (`m == NoSymbol`) because the corresponding `enterModuleSymbol` has not run yet, it will only run later in the namer phase.


Another way to reproduce the same problem:
```scala
scala> def h { case class C(x: Int = 1) }
<console>:5: error: C is already defined as (compiler-generated) case class companion object C
       def h { case class C(x: Int = 1) }
                          ^
```
